working on intro. Added title, and an intro paragraph

--- a/index.html
+++ b/index.html
@@ -3,7 +3,39 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Study in USA | Guide</title>
+
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
+		</style>
 	</head>
-	<body></body>
+	<body>
+		<main>
+			<section id="intro">
+				<h1 class="title">Study in USA Training Guide</h1>
+
+				<div class="intro-info">
+					<p>
+						Studying in a different country can feel overwhelming, right? I get
+						it. As an international student myself, I've been through the whole
+						journey from researching the United States to living here for the
+						past few years. Trust me, I know firsthand how tough it can be. But
+						hey, let's not dwell on the tough parts. Yes, it takes a lot of
+						time, effort, and resources, but it's also one heck of an adventure.
+						You get to explore new cultures, meet amazing people, and grow in
+						ways you never imagined. So, if you're feeling a bit lost or unsure,
+						don't worry. Whether you need help with understanding the visa
+						process, adjusting to a new academic system, application process
+						advice, or what to do when you first arrive, I'm here to provide
+						information and some external resources to possibly help answer
+						those questions. Let's turn that overwhelming journey into an
+						exciting one together.
+					</p>
+				</div>
+
+				<div class="about-me"></div>
+			</section>
+		</main>
+	</body>
 </html>
