added a feature for connecting buttons to content

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<title>Study in USA | Guide</title>
-
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 		</style>
 	</head>
 	<body>
+		<header><h1 class="title">Study in USA Training Guide</h1></header>
+
 		<main>
 			<section id="intro">
-				<h1 class="title">Study in USA Training Guide</h1>
-
 				<div class="intro-info">
+					<img
+						class="intro-image"
+						src="./images/intro-pic.jpg"
+						alt="students from different backgrounds hanging in library"
+					/>
 					<p>
 						Studying in a different country can feel overwhelming, right? I get
 						it. As an international student myself, I've been through the whole
@@ -24,18 +28,201 @@
 						hey, let's not dwell on the tough parts. Yes, it takes a lot of
 						time, effort, and resources, but it's also one heck of an adventure.
 						You get to explore new cultures, meet amazing people, and grow in
-						ways you never imagined. So, if you're feeling a bit lost or unsure,
-						don't worry. Whether you need help with understanding the visa
-						process, adjusting to a new academic system, application process
-						advice, or what to do when you first arrive, I'm here to provide
-						information and some external resources to possibly help answer
-						those questions. Let's turn that overwhelming journey into an
-						exciting one together.
+						ways you never imagined.
+					</p>
+
+					<p class="intro-p2">
+						<br />So, if you're feeling a bit lost or unsure, don't worry.
+						Whether you need help with understanding the visa process, adjusting
+						to a new academic system, application process advice, or what to do
+						when you first arrive, I'm here to provide information and some
+						external resources to possibly help answer those questions. Let's
+						turn that overwhelming journey into an exciting one together.
 					</p>
 				</div>
 
-				<div class="about-me"></div>
+				<div class="bio">
+					<img
+						src="./images/main-profile-pic.JPG"
+						alt="Picture of me smiling"
+					/>
+
+					<div class="about">
+						<p class="about-p1">
+							If you reading this, I'm Nana Amakye. Currently, I'm an
+							international student here in the USA, majoring in Computer
+							Science, Marketing, and Management. It's been quite the journey
+							seven years of growth, challenges, and experiences that have
+							shaped me into who I am today.
+						</p>
+
+						<p class="about-p2">
+							To be real with you, it hasn't all been smooth sailing. I vividly
+							remember arriving in the United States with just $130 to my name,
+							facing months of financial struggle and relying on cafeteria meals
+							to get by. Tuition payments felt like a mountain to climb, but
+							thankfully, fate brought some incredible people into my life.
+							Their guidance, support, and kindness turned my world around when
+							I needed it most.
+						</p>
+
+						<p>
+							Now, I wish I could spill all the details here, but trust me,
+							there's more to my story than meets the eye. If you're curious to
+							learn about the highs, the lows, and everything in between, watch
+							the video below
+						</p>
+
+						<iframe
+							class="about-video"
+							src="https://www.youtube-nocookie.com/embed/c5BJjhMFXGs?si=HclCryZMF1oVMOvo"
+							title="YouTube video player"
+							frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+							allowfullscreen
+						></iframe>
+					</div>
+				</div>
+			</section>
+
+			<section id="research">
+				<h2>
+					Before deciding to study in the USA, you need to ask yourself these
+					questions:
+				</h2>
+
+				<div class="research-buttons">
+					<button id="btn-1" class="r-button">WHY THE USA</button>
+					<button id="btn-2" class="r-button">
+						WHERE WOULD YOU LIKE TO SUDY
+					</button>
+					<button id="btn-3" class="r-button">WHAT WILL I STUDY</button>
+					<button id="btn-4" class="r-button">HOW WILL I PAY FOR IT</button>
+				</div>
+
+				<div class="content-container">
+					<ul id="content1" class="active-list">
+						<li>Maybe good career prospects</li>
+						<li>Reputation of USA degrees internationally</li>
+						<li>Cultural Diversity</li>
+						<li>Flexible academic system</li>
+						<li>Excellent infrastructures and support Systems</li>
+					</ul>
+					<ul id="content2">
+						<li>
+							Get a list of potential colleges you would be interest in
+							attending
+						</li>
+						<li>
+							Location of colleges &lpar; State, City, Rural &#x29;
+							<span>
+								Very important! This can affect your cost of living, personal
+								life, tuition, and how you adjust to the system and culture
+								here.
+							</span>
+						</li>
+						<li>
+							Be aware that there different types of college &lpar; Private,
+							Public, For-Profit, and many others &#x29;
+						</li>
+					</ul>
+					<ul id="content3">
+						<li>
+							Need to make sure your is highly demanded field witha high chance
+							of employment
+						</li>
+						<li>
+							Need to be intentional about your choice.
+							<span
+								>In the USA you can major in any field that you want. There are
+								no restrictions like in other countries</span
+							>
+						</li>
+						<li>
+							<span class="content3-l3">Recommendation:</span> Go for the STEM
+							Majors if you can. The possiblity of being able to work for 3
+							years for bachelors degree and above is high.
+						</li>
+					</ul>
+					<ul id="content4">
+						<li>Need to know if you will have to apply for scholarships</li>
+						<li>
+							How will I finance my education in case I do not get scholarships
+						</li>
+						<li>What ways can I finance my education</li>
+						<li>Is the whole prcess feasible</li>
+						<li>
+							Studying in the USA can get very expensive. Not having a plan can
+							be detrimental
+						</li>
+					</ul>
+				</div>
+
+				<div class="important-research-info">
+					<h2>Keep Notes of these. Very Important!!</h2>
+					<ul>
+						<li>
+							Living in big cities will be more expensive than a smaller or
+							medium size town or city
+						</li>
+						<li>
+							The State Or Region you choose to go to college at can affect you.
+							There are 5 regions &lpar; The Midwest, West, Southwest,
+							SouthEast, and Northeast &#x29;
+						</li>
+						<li>
+							Community Colleges are cheaper, and can be a great way to attend
+							college here in the USA. You have a better change of getting
+							scholarships and being able to pay for it.
+							<span> It can be hard to get Visa for Community College</span>
+						</li>
+						<li>
+							Your first Semester or first year will be the toughes if you have
+							to pay for vollege. It is what I call the &quot; Make or Break
+							&quot; period. it is either you able to pay, or have to drop out.
+							<span
+								>Sometimes your I-20 which I will talk about later can get
+								cancelled if you cannot pay. Therefore be compelled to go back
+								home.</span
+							>
+						</li>
+					</ul>
+
+					<h2 class="research-video-resoures">
+						Video Resources talks about things to know before deciding to come
+						study in the USA
+					</h2>
+
+					<iframe
+						class="about-video"
+						src="https://www.youtube-nocookie.com/embed/vSeSG-i_G_Q?si=5XoK61FvnMquh7PZ"
+						title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen
+					></iframe>
+
+					<iframe
+						class="about-video"
+						src="https://www.youtube-nocookie.com/embed/vP28MEGKlN4?si=ecrAfxkg-ulBu2AT"
+						title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen
+					></iframe>
+
+					<iframe
+						class="about-video"
+						src="https://www.youtube-nocookie.com/embed/tTifNGaY0aU?si=w2Z5rqgQj7hGyfEQ"
+						title="YouTube video player"
+						frameborder="0"
+						allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+						allowfullscreen
+					></iframe>
+				</div>
 			</section>
 		</main>
+
+		<script src="./interact.js" defer></script>
 	</body>
 </html>
