changed css so it looks good on laptop

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="media-queries.css" />
 		<title>Study in USA | Guide</title>
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
@@ -42,10 +43,7 @@
 				</div>
 
 				<div class="bio">
-					<img
-						src="./images/main-profile-pic.JPG"
-						alt="Picture of me smiling"
-					/>
+					<img src="./images/profile-pic.jpg" alt="Picture of me smiling" />
 
 					<div class="about">
 						<p class="about-p1">
@@ -66,7 +64,7 @@
 							I needed it most.
 						</p>
 
-						<p>
+						<p class="about-p2">
 							Now, I wish I could spill all the details here, but trust me,
 							there's more to my story than meets the eye. If you're curious to
 							learn about the highs, the lows, and everything in between, watch
