changed he design and layout of site

--- a/index.html
+++ b/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="Cache-control" content="public">
+		<meta http-equiv="Cache-control" content="public" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="style.css" />
 		<link rel="stylesheet" href="media-queries.css" />
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Study in USA | Guide</title>
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
@@ -17,11 +24,6 @@
 		<main>
 			<section id="intro">
 				<div class="intro-info">
-					<img
-						class="intro-image"
-						src="./images/intro-pic.jpg"
-						alt="students from different backgrounds hanging in library"
-					/>
 					<p>
 						Studying in a different country can feel overwhelming, right? I get
 						it. As an international student myself, I've been through the whole
@@ -32,6 +34,12 @@
 						You get to explore new cultures, meet amazing people, and grow in
 						ways you never imagined.
 					</p>
+
+					<img
+						class="intro-image"
+						src="./images/lost.jpg"
+						alt="Picture of woman fraustrated or exhausted"
+					/>
 
 					<p class="intro-p2">
 						<br />So, if you're feeling a bit lost or unsure, don't worry.
@@ -47,12 +55,14 @@
 					<img src="./images/profile-pic.jpg" alt="Picture of me smiling" />
 
 					<div class="about">
+						<h2>About me</h2>
+
 						<p class="about-p1">
-							If you reading this, I'm Nana Amakye. Currently, I'm an
-							international student here in the USA, majoring in Computer
-							Science, Marketing, and Management. It's been quite the journey
-							seven years of growth, challenges, and experiences that have
-							shaped me into who I am today.
+							If you reading this, I'm Nana Amakye.Originally from Ghana, in
+							West Africa. Currently, I'm an international student here in the
+							USA, majoring in Computer Science, Marketing, and Management. It's
+							been quite the journey seven years of growth, challenges, and
+							experiences that have shaped me into who I am today.
 						</p>
 
 						<p class="about-p2">
