made some changes to the design

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 						You get to explore new cultures, meet amazing people, and grow in
 						ways you never imagined.
 					</p>
+				</div>
 
+				<div class="sub-intro-info">
 					<img
 						class="intro-image"
 						src="./images/lost.jpg"
@@ -95,7 +97,7 @@
 			</section>
 
 			<section id="research">
-				<h2>
+				<h2 class="research-h1">
 					Before deciding to study in the USA, you need to ask yourself these
 					questions:
 				</h2>
@@ -168,7 +170,9 @@
 				</div>
 
 				<div class="important-research-info">
-					<h2>Keep Notes of these. Very Important!!</h2>
+					<h2 class="research-h1 note-h2">
+						Keep Notes of these. Very Important!!
+					</h2>
 					<ul>
 						<li>
 							Living in big cities will be more expensive than a smaller or
