updated some info for media quesry

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						</li>
 						<li>
 							Your first Semester or first year will be the toughes if you have
-							to pay for vollege. It is what I call the &quot; Make or Break
+							to pay for College. It is what I call the &quot; Make or Break
 							&quot; period. it is either you able to pay, or have to drop out.
 							<span
 								>Sometimes your I-20 which I will talk about later can get
